--- a/HTML Introduction/index.html
+++ b/HTML Introduction/index.html
@@ -3,26 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ITSchool</title>
+    <title>ITSchool - HTML Sesiunea 1</title>
   </head>
-  <br>
+  <body>
     <div>
       <div>
-        <h1>ITSchool - Acesta este un titlu 1</h1>
-        <h2>ITSchool - Acesta este un titlu 2</h2>
+        <h1>Acesta este titlu 1</h1>
+        <h2>Acesta este titlu 2</h2>
       </div>
-      <h3>ITSchool - Acesta este un titlu 3</h3>
-      <h4>ITSchool - Acesta este un titlu 4</h4>
-      <h5>ITSchool - Acesta este un titlu 5</h5>
-      <h6>ITSchool - Acesta este un titlu 6</h6>
+      <h3>Acesta este titlu 3</h3>
+      <h4>Acesta este titlu 4</h4>
+      <span>Acesta este un span</span>
+      <h5>Acesta este titlu 5</h5>
+      <h6>Acesta este titlu 6</h6>
     </div>
     <p>
-      <span style="color: red;">Lorem</span> ipsum dolor sit amet consectetur adipisicing elit. Ab, laboriosam
-      consequatur itaque voluptatem beatae ipsam velit dignissimos nisi nam
-      molestias, repellat perferendis harum quis quam atque aliquam sequi ad
-      suscipit.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem pariatur
+      necessitatibus provident. <span>Magnam</span>, quos nostrum? Accusantium
+      quod obcaecati corporis neque illum, dolor non? Odit omnis et est beatae
+      illum nihil?
     </p>
-    <span>Acesta este un span</span></br>
+    <span>Acesta este un span</span>
     <a href="http://google.ro">Link catre Google</a>
     <ul>
       <li>Item 1</li>
@@ -35,47 +36,49 @@
       <li>Item Ordonat 2</li>
       <li>Item Ordonat 3</li>
       <li>Item Ordonat 4</li>
+      <li>Item Ordonat 5</li>
     </ol>
-    <img src="https://t3.ftcdn.net/jpg/05/85/86/44/360_F_585864419_kgIYUcDQ0yiLOCo1aRjeu7kRxndcoitz.jpg" alt="">
+    <img
+      src="https://s13emagst.akamaized.net/products/58258/58257152/images/res_68935e82ba8ee3a6bd1bca160a622445.png?width=450&height=450&hash=72036B4B2F9943D6061E005456EF5905"
+    />
     <form>
-        <input type="text" placeholder="Name">
-        <input type="email" placeholder="Email"> 
-        <input type="password" placeholder="Password">
-        <input type="color">
-        <input type="date">
-          <textarea></textarea>
-
-
-        <select>
-            <option value="1">Ianuarie</option>
-            <option value="1">Februarie</option>
-            <option value="1">Martie</option>
-            <option value="1">Aprilie</option>
-            <option value="1">Mai</option>
-        </select>
-        <button type="submit">Save</button>
+      <input type="text" placeholder="Name" />
+      <input type="email" placeholder="Email" />
+      <input type="password" placeholder="Password" />
+      <input type="color" />
+      <input type="date" />
+      <textarea></textarea>
+      <select>
+        <option value="1">Ianuarie</option>
+        <option value="2">Februarie</option>
+        <option value="3">Martie</option>
+        <option value="4">Aprilie</option>
+        <option value="5">Mai</option>
+        <option value="6">Iunie</option>
+      </select>
+      <button type="submit">Save</button>
     </form>
     <table>
-        <thead>
-            <tr>
-                <th>Nume</th>
-                <th>Varsta</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Mihai</td>
-                <td>21</td>
-            </tr>
-            <tr>
-                <td>Andrei</td>
-                <td>32</td>
-            </tr>
-            <tr>
-                <td>Maria</td>
-                <td>14</td>
-            </tr>
-        </tbody>
+      <thead>
+        <tr>
+          <th>Nume</th>
+          <th>Varsta</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Mihai</td>
+          <td>21</td>
+        </tr>
+        <tr>
+          <td>Andrei</td>
+          <td>32</td>
+        </tr>
+        <tr>
+          <td>Maria</td>
+          <td>14</td>
+        </tr>
+      </tbody>
     </table>
   </body>
 </html>
