--- a/js-functions/index.html
+++ b/js-functions/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./bubble-sort.js"></script>
+    <script src="./hoisting.js"></script>
     <title>JS Function</title>
   </head>
   <body></body>
